[package]
name = "lunch-messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
http = { version = "1.4.0"}
pushover-rs = { version = "0.3.22" }
reqwest = { version = "0.12.25", features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"]}
